--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,8 @@
               "deviseID": "pozrjf",
               "deviseName": "tab1",
               "beaconConnected":{
-                "deviseID": "pmerjogpo",
-                "deviseName": "cuisine"
+                "beaconID": "pmerjogpo",
+                "beaconName": "cuisine"
               }
             }
           </pre>
